--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 COOKIE_SECRET=dfkkasdl3h5g2j4k77l3k4D
 DB_URL=mongodb://127.0.0.1:27017/metube
+GH_CLIENT=466cdcd1dc32212bddfb
+GH_SECRET=1d0582d58d794be81ddb6966610c88092b41d5e6
