--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.17.5",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
     "nodemon": "^2.0.15",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
