--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
     "nodemon": "^2.0.15",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   }
