--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run build:server && npm run build:assets", 
     "build:server": "babel src -d build",
     "build:assets": "webpack --mode=production",
+    "web": "node init.js",
     "dev:server": "nodemon",
     "dev:assets": "webpack --mode=development -w"
   },
