--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ COOKIE_SECRET=dfkkasdl3h5g2j4k77l3k4D
 DB_URL=mongodb://127.0.0.1:27017/metube
 GH_CLIENT=466cdcd1dc32212bddfb
 GH_SECRET=1d0582d58d794be81ddb6966610c88092b41d5e6
+AWS_ID=AKIA27QM6VTTBBY2QYXR
+AWS_SECRET=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
